--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <a href="index.html">Home page</a> <a href="yang.html">Yang</a> <a href="yin.html">Yin</a>
-    <h1>Yin and Yang</h1>
-    <h5>Disclaimer: I came up with this idea at like 9:40 while watching the Avatar so there is a good chance this will be bad.</h5>
+    <h1>Terraria</h1>
+    <h3>With Terraria 1.4 AKA "Journeys End" finally out I figured I would make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
+    <h4>Although I'm not familiar with the new gear so I'll add what I see fit when I come across it in my playthrough.<h4>
   </head>
   <body>
     
-   <p>Yin and yang is an ancient Chinese Philosophy that brings about the idea that two opposites can be intertwined in such a way that they cannot be without one another. There is no good without bad. There is no life with out death. There is no sun without the moon. </p>
+   <p></p>
     <h3></h3>
     <a href="yin.html"> <h3 class="font">Yin</h3></a>
     <p>Yin represents the negative energy of the two such as Darkness, Death,and the Moon.</p>
