--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     
-   <p></p>
+   <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
+    <ul>
+      <li>Melee</li>
+      <li>Ranged</li>
+      <li>Magic</li>
+      <li>Summoner</li>
+    </ul>
     <h3></h3>
     <a href="yin.html"> <h3 class="font">Yin</h3></a>
     <p></p>
