--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
-    <a href="index.html">Home page</a> <a href="https://terraria.gamepedia.com/Titanium_armor">Titanium armor</a> <a href="yin.html">Yin</a>
+    <a href="index.html">Home page</a> <a href=""></a> <a href="yin.html">Yin</a>
     <h1>Terraria</h1>
     <h3>With Terraria 1.4 AKA "Journeys End" finally out I figured I would make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
     <h4>Although I'm not familiar with the new gear so I'll add what I see fit when I come across it in my playthrough.<h4>
