--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h4>Although I'm not familiar with the new gear so I'll add what I see fit when I come across it in my playthrough.<h4>
   </head>
   <body>
-    
+   <p>To be clear this isn't a playthrough guide, it's simply a guid that tells you what to look for gear-wise.</p>
    <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
     <ul>
       <li>Melee</li>
