--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    <p>To be clear this isn't a playthrough guide, it's simply a guid that tells you what to look for gear-wise.</p>
    <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
     <ul>
-      <li><a href="melee.html"> <h3 class="font">Melee</h3></a></li>
-      <li><a href="ranged.html"> <h3 class="font">Ranged</h3></a></li>
+      <li><a href="melee.html"> <h3>Melee</h3></a></li>
+      <li><a href="ranged.html"> <h3>Ranged</h3></a></li>
       <li>Magic</li>
       <li>Summoner</li>
     </ul>
