--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
    <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
     <ul>
       <li><a href="melee.html">Melee</a></li>
-      <li><a href="ranged.html">Ranged<</a></li>
+      <li><a href="ranged.html">Ranged</a></li>
       <li>Magic</li>
       <li>Summoner</li>
     </ul>
     <h3></h3>
-    <a href="yin.html"> <h3 class="font">Yin</h3></a>
     <p></p>
-    <a href="yang.html"> <h3 class="font">Yang</h3></a>
     <p></p>
-    <img src= "3395026845_1668a4063d_b.jpg" height=350>
     <p></p>
         
 
