--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h1>Terraria</h1>
     <h3>With Terraria 1.4 AKA "Journeys End" finally out I figured I would make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
     <h4>Although I'm not familiar with the new gear so I'll add what I see fit when I come across it in my playthrough.<h4>
+      <h6>All pictures on this website are screenshots of Terraria taken by me.</h6>
   </head>
   <body>
    <p>To be clear this isn't a playthrough guide, it's simply a guid that tells you what to look for gear-wise.</p>
@@ -13,8 +14,8 @@
     <ul>
       <li><a href="melee.html">Melee</a></li>
       <li><a href="ranged.html">Ranged</a></li>
-      <li>Magic</li>
-      <li>Summoner</li>
+      <li><a href="magic.html">Magic</li>
+      <li><a href="summoner.html">Summoner</li>
     </ul>
    
     <h3></h3>
