--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
-    <a href="index.html">Home page</a> <a href=""></a> <a href="yin.html">Yin</a>
-    <h1>Terraria</h1>
+    <a href="index.html">Home page</a> <a href="">
     <h3>With Terraria 1.4 AKA "Journeys End" finally out I figured I would make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
     <h4>Although I'm not familiar with the new gear so I'll add what I see fit when I come across it in my playthrough.<h4>
       <h6>All pictures on this website are screenshots of Terraria taken by me.</h6>
@@ -13,6 +12,7 @@
    <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
     <ul>
       <li><a href="melee.html">Melee</a></li>
+     
       <li><a href="ranged.html">Ranged</a></li>
       <li><a href="magic.html">Magic</li>
       <li><a href="summoner.html">Summoner</li>
