--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
     <ul>
       <li><a href="melee.html">Melee</a></li>
-     
+      <img src="Capture 2020-06-07 15_47_14.png">
       <li><a href="ranged.html">Ranged</a></li>
       <li><a href="magic.html">Magic</li>
       <li><a href="summoner.html">Summoner</li>
