--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h6>All pictures on this website are screenshots of Terraria taken by me.</h6>
   </head>
   <body>
-   <p>To be clear this isn't a playthrough guide, it's simply a guid that tells you what to look for gear-wise.</p>
+   <p>To be clear this isn't a playthrough guide, it's simply a guide that tells you what to look for gear-wise.</p>
    <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
     <ul>
       <img src="Capture 2020-06-07 15_37_31.png" height="100px">
