--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <a href="index.html">Home page</a>
-    <h3>With Terraria 1.4 AKA "Journeys End" finally out I figured I would make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
+    <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
     <h4>Although I'm not familiar with the new gear so I'll add what I see fit when I come across it in my playthrough.<h4>
       <h5>All pictures on this website are screenshots of Terraria taken by me.</h5>
   </head>
   <body>
-   <p>To be clear this isn't a playthrough guide, it's simply a guide that tells you what to look for gear-wise.</p>
+   <p> To be clear this isn't a playthrough guide, it's simply a guide that tells you what to look for gear-wise.</p>
    <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
     <ul>
       <img src="Capture 2020-06-07 15_47_14.png" height="250px">
