--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
+     <h1>Terraria build guide!</h1>
     <a href="index.html">Home page</a>
     <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
     <h4>Although I'm not familiar with the new gear so I'll add what I see fit when I come across it in my playthrough.<h4>
