--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
    <p> To be clear this isn't a playthrough guide, it's simply a guide that tells you what to look for gear-wise.</p>
-   <p>There are four main classes, each one has it's own unique fighting style that fits different types of people.</p>
+   <p>To start there are four main classes, each one has it's own unique fighting style that fits different types of people. Some of the items that you will use will be interchangable between all classes.</p>
+    <h3>Interchangable Gear</h3>
+    <h4>Armor</h4>
+    <p> There is two types of armor, Class specific and Base armor. If you are brave enough you can go straight for Class specific, but that's difficult and having base armor is quite useful.</p>
+    <p> The order goes: Wood Armor, Cactus Armor, Copper Armor, Tin Armor, Iron/Lead Armor, Silver/Tungsten Armor, Gold/Platinum Armor.</p>
     <ul>
       <img src="Capture 2020-06-07 15_47_14.png" height="250px">
       <li><a href="melee.html">Melee</a></li>
