--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
-     <h1>Terraria build guide!</h1>
+     <h1 class="font">Terraria build guide!</h1>
     <a href="index.html">Home page</a>
     <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
       <h5>All pictures on this website are screenshots of Terraria taken by me.</h5>
