--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h3>Interchangable Gear</h3>
     <h4>Armor</h4>
     <p> There is two types of armor, Class specific and Base armor. If you are brave enough you can go straight for Class specific, but that's difficult and having base armor is quite useful.</p>
-    <p> The order goes: Wood Armor, Cactus Armor, Copper Armor, Tin Armor, Iron/Lead Armor, Silver/Tungsten Armor, Gold/Platinum Armor.</p>
+    <p> Wood Armor, Cactus Armor, Copper Armor, Tin Armor, Iron/Lead Armor, Silver/Tungsten Armor, Gold/Platinum Armor.</p>
+    <div class="order">Wood Armor</div>
     <ul>
       <img src="Capture 2020-06-07 15_47_14.png" height="250px">
       <li><a href="melee.html">Melee</a></li>
