--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h4>Armor</h4>
     <p> There is two types of armor, Class specific and Base armor. If you are brave enough you can go straight for Class specific, but that's difficult and having base armor is quite useful.</p>
     <p> Wood Armor, Cactus Armor, Copper Armor, Tin Armor, Iron/Lead Armor, Silver/Tungsten Armor, Gold/Platinum Armor.</p>
-    <div class="order">Wood Armor</div>
+    <div class="order">Wood Armor
+    <img src="Capture 2020-06-08 10_13_54.png"></div>
     <ul>
       <img src="Capture 2020-06-07 15_47_14.png" height="250px">
       <li><a href="melee.html">Melee</a></li>
