--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h3>Interchangable Gear</h3>
     <h4>Armor</h4>
     <p> There is two types of armor, Class specific and Base armor. If you are brave enough you can go straight for Class specific, but that's difficult and having base armor is quite useful.</p>
-    <div class="order">Wood Armor</div><div class="order">Cactus Armor</div><div class="order">Copper Armor</div><div class="order">Tin Armor</div><div class="order">Iron/Lead Armor</div><div class="order">Silver/Tungsten Armor</div><div class="order">Gold/Platinum Armor</div>
-    <div class="image"><img src="Capture 2020-06-08 10_13_54.png"></div>
+    <div class="order">Wood Armor<img class= "image" src="Capture 2020-06-08 10_13_54.png"></div><div class="order">Cactus Armor</div><div class="order">Copper Armor</div><div class="order">Tin Armor</div><div class="order">Iron/Lead Armor</div><div class="order">Silver/Tungsten Armor</div><div class="order">Gold/Platinum Armor</div>
+    
     <ul>
       <img src="Capture 2020-06-07 15_47_14.png" height="250px">
       <li><a href="melee.html">Melee</a></li>
