--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <h3>Interchangable Gear</h3>
     <h4>Armor</h4>
     <p> There is two types of armor, Class specific and Base armor. If you are brave enough you can go straight for Class specific, but that's difficult and having base armor is quite useful.</p>
-    <div class="order">Wood Armor<img class= "image" src="Capture 2020-06-08 10_13_54.png"></div><div class="order">Cactus Armor</div><div class="order">Copper/Tin Armor</div><div class="order">Lead/Iron Armor</div><div class="order">Tungsten/Silver Armor</div><div class="order">Gold/Platinum Armor</div>
+    <div class="order">Wood Armor<img class= "image" src="wood armor.png"></div>
+    <div class="order">Cactus Armor<img class= "image" src="cactus armor.png"></div>
+    <div class="order">Copper/Tin Armor<img class= "image" src="copper armor.png"></div>
+    <div class="order">Lead/Iron Armor<img class= "image" src="lead armor.png"></div>
+    <div class="order">Tungsten/Silver Armor<img class= "image" src="tungsten armor.png"></div>
+    <div class="order">Gold/Platinum Armor<img class= "image" src="gold armor.png"></div>
     
     <ul>
       <img src="Capture 2020-06-07 15_47_14.png" height="250px">
