--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="order">Cactus Armor<img class= "image" src="cactus armor.png"></div>
     <div class="order">Copper/Tin Armor<img class= "image" src="copper armor.png"></div>
     <div class="order">Lead/Iron Armor<img class= "image" src="lead armor.png"></div>
-    <div class="order">Tungsten/Silver Armor<img class= "image" src="tungsten armor.png"></div>
+    <div class="order">Tungst/Silv Armor<img class= "image" src="tungsten armor.png"></div>
     <div class="order">Gold/Platinum Armor<img class= "image" src="gold armor.png"></div>
     
     <ul>
