--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="order">Lead/Iron Armor<img class= "image" src="lead armor.png"></div>
     <div class="order">Tungst/Silv Armor<img class= "image" src="tungsten armor.png"></div>
     <div class="order">Gold/Platinum Armor<img class= "image" src="gold armor.png"></div>
-    <hr>
+    <p>This is where I delve into the base accessories every class needs.</p>
     <ul>
       <img src="Capture 2020-06-07 15_47_14.png" height="250px">
       <li><a href="melee.html">Melee</a></li>
