--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   </head>
   <body>
    <p>To start there are four main classes, each one has it's own unique fighting style that fits different types of people. Some of the items that you will use will be interchangable between all classes.</p>
-    <h3>Interchangable Gear</h3>
-    <hr>
     <h4>Armor</h4>
     <p> There is two types of armor, Class specific and Base armor. If you are brave enough you can go straight for Class specific, but that's difficult and having base armor is quite useful.</p>
     <div class="order">Wood Armor<img class= "image" src="wood armor.png"></div>
@@ -19,9 +17,8 @@
     <div class="order">Lead/Iron Armor<img class= "image" src="lead armor.png"></div>
     <div class="order">Tungst/Silv Armor<img class= "image" src="tungsten armor.png"></div>
     <div class="order">Gold/Platinum Armor<img class= "image" src="gold armor.png"></div><br><br><br><br><br><br><br>
-    <p>This is where I delve into the base accessories every class needs.</p>
+    <h4>Accessories</h4>
     <ul>
-      <img src="Capture 2020-06-07 15_47_14.png" height="250px">
       <li><a href="melee.html">Melee</a></li>
       <li><a href="ranged.html">Ranged</a></li>
       <li><a href="magic.html">Magic</li>
