--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="order">Gold/Platinum Armor<img class= "image" src="gold armor.png"></div><br><br><br><br><br><br><br>
     <h4>Accessories</h4>
     <p> Accessory wise the only thing that every class will need is mobility. In the start you'll want Hermes boots and once you find the Goblin Tinkerer you'll upgrade that to Spectre Boots.</p>
+    <h4>Classes</h4>
     <ul>
       
       <li><a href="melee.html">Melee</a></li>
