--- a/melee.html
+++ b/melee.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="yang.css">
+    <link rel="stylesheet" href="index.css">
     <a href="index.html">Home page</a> <a href="ranged.html">Ranged</a> <a href="magic.html">Magic</a> <a href="summoner.html">Summoner</a>
   </head>
   <body>
