--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="index.css">
      <h1 class="font">Terraria build guide!</h1>
-    <a href="index.html">Home page</a>
+    <a href="index.html">Home page</a> <a href="melee.html">Melee</a> <a href="ranged.html">Ranged</a> <a href="magic.html">Magic</a> <a href="summoner.html">Summoner</a>
     <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
       <h5>All pictures on this website are screenshots of Terraria taken by me.</h5>
   </head>
