--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <link rel="stylesheet" href="index.css">
      <h1 class="font">Terraria build guide!</h1>
-    <a href="index.html">Home page</a> <a href="melee.html">Melee</a> <a href="ranged.html">Ranged</a> <a href="magic.html">Magic</a> <a href="summoner.html">Summoner</a>
-    <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
+    <ul>
+    <li><a href="index.html">Home page</a></li> <li><a href="melee.html">Melee</a></li> <li><a href="ranged.html">Ranged</a></li> <li><a href="magic.html">Magic</a></li> <li><a href="summoner.html">Summoner</a></li>
+    </ul>
+      <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
       <h5>All pictures on this website are screenshots of Terraria taken by me.</h5>
   </head>
   <body>
@@ -21,7 +23,7 @@
     <h4>Accessories</h4>
     <p> Accessory wise the only thing that every class will need is mobility. In the start you'll want Hermes boots and once you find the Goblin Tinkerer you'll upgrade that to Spectre Boots.</p>
     <h4>Classes</h4>
-    <ul>
+    <ul class="classes">
       
       <li><a href="melee.html">Melee</a></li>
       
