--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="index.css">
      <h1 class="font">Terraria build guide!</h1>
-    <ul>
+    <ul class="header">
     <li><a href="index.html">Home page</a></li> <li><a href="melee.html">Melee</a></li> <li><a href="ranged.html">Ranged</a></li> <li><a href="magic.html">Magic</a></li> <li><a href="summoner.html">Summoner</a></li>
     </ul>
       <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
@@ -13,7 +13,7 @@
    <p>To start there are four main classes, each one has it's own unique fighting style that fits different types of people. Some of the items that you will use will be interchangable between all classes, which is why I'll show you them here.</p>
     <h4>Armor</h4>
     <p> There is two types of armor, Class specific and Base armor. If you are brave enough you can go straight for Class specific, but that's difficult and having base armor is quite useful.</p>
-    <p> Pre-Hardmode</p>
+    <p class="titles"> Pre-Hardmode</p>
     <div class="order">Wood Armor<img class= "image" src="wood armor.png"></div>
     <div class="order">Cactus Armor<img class= "image" src="cactus armor.png"></div>
     <div class="order">Copper/Tin Armor<img class= "image" src="copper armor.png"></div>
