--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html> 
 <html>
   <head>
+    <style>
+    a { text-decoration: none; }
+    </style>
     <link rel="stylesheet" href="index.css">
      <h1 class="font">Terraria build guide!</h1>
     <ul class="header">
