--- a/melee.html
+++ b/melee.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
-    <a href="index.html">Home page</a> <a href="ranged.html">Ranged</a> <a href="magic.html">Magic</a> <a href="summoner.html">Summoner</a>
+   <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
   </head>
   <body>
     <h1>Melee</h1>
