--- a/magic.html
+++ b/magic.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
 
+<html>
+
+  <head>
+
+   <link rel="stylesheet" href="index.css">
+   <h1> Magic </h1>
+   <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
+
+  </head>
+
+  <body>
+
+    <h1></h1>
+
+    <p></p>
+
+    <h4>Armor</h4>
+    
+    <h4>Accessories</h4
+
+    <h4>Weapons</h4>
+
+    <p></p>
+
+  </body>
+
+</html>
