--- a/ranged.html
+++ b/ranged.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
+
 <html>
+
   <head>
-    <link rel="stylesheet" href="yin.css">
-    <a href="index.html">Home page</a> <a href="yang.html">Yang</a>
+
+    <link rel="stylesheet" href="index.css">
+    <h1>Ranged</h1>
+   <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="melee.html">Melee</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
+
   </head>
+
   <body>
-    <h1>Yin</h1>
-    <p>Yin is the negative side of the two, mostly black with a little white, Yin represents many things such as:</p>
-    <ul>
-      <li>Death</li>
-      <li>Darkness</li>
-      <li>The Moon</li>
-      <li>Bad</li>
-    </ul>
-    <p>Without Yin there is no Yang, there is no right without a wrong to base it off of.</p>
-    <p>In the center of the Yin symbol there is a white dot, this dot represents the "light in the dark" it further connects the two concepts.</p>
+
+    <p></p>
+
+    <h4>Armor</h4>
+
+    <h4>Accessories</h4>
+
+    <h4>Weapons</h4>
+
+    <p></p>
+
   </body>
+
 </html>
