--- a/ranged.html
+++ b/ranged.html
@@ -5,7 +5,7 @@
   <head>
 
     <link rel="stylesheet" href="index.css">
-    <h1>Ranged</h1>
+    <h1 class="font">Ranged</h1>
    <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="melee.html">Melee</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
 
   </head>
