--- a/melee.html
+++ b/melee.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
+    <h1 class="font">Melee</h1>
+    <ul>
    <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
-  </head>
+      </li>
+      </head>
   <body>
     <h1>Melee</h1>
     <p>Melee is a class built for people who like to get up close and personal, you do massive damage but also take massive damage due to being so close to danger.</p>
