--- a/magic.html
+++ b/magic.html
@@ -5,9 +5,10 @@
   <head>
 
    <link rel="stylesheet" href="index.css">
-   <h1> Magic </h1>
+   <h1 class="font"> Magic </h1>
+    <ul>
    <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
-
+    </ul>
   </head>
 
   <body>
