--- a/melee.html
+++ b/melee.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <h1 class="font">Melee</h1>
-    <ul>
+    <ul class="header">
    <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
       </li>
       </head>
