--- a/ranged.html
+++ b/ranged.html
@@ -6,8 +6,9 @@
 
     <link rel="stylesheet" href="index.css">
     <h1 class="font">Ranged</h1>
+    <ul class="header">
    <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="melee.html">Melee</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
-
+    </ul>
   </head>
 
   <body>
