--- a/summoner.html
+++ b/summoner.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+  
+  <head>
+    <link rel="stylesheet" href="index.css">
+    <h1 class="font">Summoner</h1>
+    <ul class="header">
+   <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="melee.html">Melee</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet">
 
+    </ul>
+
+  </head>
+
+  <body>
+
+    <p></p>
+
+    <h4>Armor</h4>
+
+    <h4>Accessories</h4>
+
+    <h4>Weapons</h4>
+
+    <p></p>
+
+  </body>
+
+
+
+</html>
