--- a/magic.html
+++ b/magic.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="index.css">
    <h1 class="font"> Magic </h1>
     <ul class="header">
-   <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
+   <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="melee.html">Melee</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
     </ul>
   </head>
 
