--- a/summoner.html
+++ b/summoner.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" href="index.css">
     <h1 class="font">Summoner</h1>
     <ul class="header">
-   <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="melee.html">Melee</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet">
-
+      <li class="yeet current"><a href="index.html">Home page</a></li>
+      <li class="yeet"><a href="melee.html">Melee</a></li>
+      <li class="yeet"><a href="ranged.html">Ranged</a></li>
+      <li class="yeet"><a href="magic.html">Magic</a></li>
+      <li class="yeet current"><a href="summoner.html">Summoner</a></li>
     </ul>
 
   </head>
