--- a/magic.html
+++ b/magic.html
@@ -3,7 +3,9 @@
 <html>
 
   <head>
-
+    <style>
+    a { text-decoration: none; }
+    </style>
    <link rel="stylesheet" href="index.css">
    <h1 class="font"> Magic </h1>
     <ul class="header">
