--- a/summoner.html
+++ b/summoner.html
@@ -2,6 +2,9 @@
 <html>
   
   <head>
+    <style>
+    a { text-decoration: none; }
+    </style>
     <link rel="stylesheet" href="index.css">
     <h1 class="font">Summoner</h1>
     <ul class="header">
