--- a/melee.html
+++ b/melee.html
@@ -13,7 +13,14 @@
   <body>
     <p>Melee is a class built for people who like to get up close and personal, you do massive damage but also take massive damage due to being so close to danger.</p>
     <h4>Armor</h4>
-    
+    <h5>Pre-Hardmode</h5>
+    <div class="order">Shadow/Crimson Armor</div>
+    <div class="order">Molten Armor</div><br><br>
+    <h5> Hardmode</h5>
+    <div class="order">Adamant/Titan Armor<img class= "image" src="copper armor.png"></div>
+    <div class="order">Hallowed Armor</div>
+    <div class="order">Turtle Armor</div>
+    <div class="order">Solar Flare Armor</div>
     <h4>Accessories</h4>
     
     <h4>Weapons</h4>
