--- a/melee.html
+++ b/melee.html
@@ -15,7 +15,7 @@
     <h4>Armor</h4>
     <h5>Pre-Hardmode</h5>
     <div class="order">Shadow/Crimson Armor</div>
-    <div class="order">Molten Armor</div><br><br>
+    <div class="order">Molten Armor</div><br><br><br><br><br><br>
     <h5> Hardmode</h5>
     <div class="order">Adamant/Titan Armor<img class= "image" src="copper armor.png"></div>
     <div class="order">Hallowed Armor</div>
