--- a/melee.html
+++ b/melee.html
@@ -17,7 +17,7 @@
     <div class="order">Shadow/Crimson Armor</div>
     <div class="order">Molten Armor</div><br><br><br><br><br><br><br>
     <h5> Hardmode</h5>
-    <div class="order">Adamant/Titan Armor<img class= "image" src="copper armor.png"></div>
+    <div class="order">Adamant/Titan Armor</div>
     <div class="order">Hallowed Armor</div>
     <div class="order">Turtle Armor</div>
     <div class="order">Solar Flare Armor</div><br><br><br><br><br><br><br>
