--- a/melee.html
+++ b/melee.html
@@ -20,6 +20,7 @@
     <div class="order">Adamant/Titan Armor</div>
     <div class="order">Hallowed Armor</div>
     <div class="order">Turtle Armor</div>
+    <div class="order">Beetle Armor</div>
     <div class="order">Solar Flare Armor</div><br><br><br><br><br><br><br>
     <h4>Accessories</h4>
     
