--- a/ranged.html
+++ b/ranged.html
@@ -20,9 +20,15 @@
   <body>
 
     <p></p>
-
+    
     <h4>Armor</h4>
-
+    <div class="order">Fossil Armor</div>
+    <div class="order">Necro Armor</div><br><br><br><br><br><br><br>
+    <h5> Hardmode</h5>
+    <div class="order">Adamant/Titan Armor</div>
+    <div class="order">Hallowed Armor</div>
+    <div class="order">Shroomite Armor</div>
+    <div class="order">Vortex Armor</div><br><br><br><br><br><br><br>
     <h4>Accessories</h4>
 
     <h4>Weapons</h4>
