--- a/magic.html
+++ b/magic.html
@@ -24,7 +24,13 @@
     <p></p>
 
     <h4>Armor</h4>
-    
+    <div class="order">Meteor Armor</div>
+    <div class="order">Jungle Armor</div><br><br><br><br><br><br><br>
+    <h5> Hardmode</h5>
+    <div class="order">Adamant/Titan Armor</div>
+    <div class="order">Hallowed Armor</div>
+    <div class="order">Spectre Armor</div>
+    <div class="order">Nebula Armor</div><br><br><br><br><br><br><br>  
     <h4>Accessories</h4>
 
     <h4>Weapons</h4>
