--- a/summoner.html
+++ b/summoner.html
@@ -22,7 +22,12 @@
     <p></p>
 
     <h4>Armor</h4>
-
+    <div class="order">Bee Armor</div>
+    <h5> Hardmode</h5>
+    <div class="order">Spider Armor</div>
+    <div class="order">Forbidden Armor</div>
+    <div class="order">Spooky Armor</div>
+    <div class="order">Starlight Armor</div><br><br><br><br><br><br><br>
     <h4>Accessories</h4>
 
     <h4>Weapons</h4>
