--- a/summoner.html
+++ b/summoner.html
@@ -22,7 +22,8 @@
     <p></p>
 
     <h4>Armor</h4>
-    <div class="order">Bee Armor</div>
+    <h5>Pre-Hardmode</h5>
+    <div class="order">Bee Armor</div><br><br><br><br><br><br><br>
     <h5> Hardmode</h5>
     <div class="order">Spider Armor</div>
     <div class="order">Forbidden Armor</div>
