--- a/melee.html
+++ b/melee.html
@@ -14,7 +14,7 @@
     <p>Melee is a class built for people who like to get up close and personal, you do massive damage but also take massive damage due to being so close to danger.</p>
     <h4>Armor</h4>
     <h5>Pre-Hardmode</h5>
-    <div class="order">Shadow/Crimson Armor</div>
+    <div class="order">Shadow/Crims Armor</div>
     <div class="order">Molten Armor</div><br><br><br><br><br><br><br>
     <h5> Hardmode</h5>
     <div class="order">Adamant/Titan Armor</div>
