--- a/magic.html
+++ b/magic.html
@@ -24,6 +24,7 @@
     <p></p>
 
     <h4>Armor</h4>
+    <h5>Pre-Hardmode</h5>
     <div class="order">Meteor Armor</div>
     <div class="order">Jungle Armor</div><br><br><br><br><br><br><br>
     <h5> Hardmode</h5>
