--- a/ranged.html
+++ b/ranged.html
@@ -22,6 +22,7 @@
     <p></p>
     
     <h4>Armor</h4>
+    <h5>Pre-Hardmode</h5>
     <div class="order">Fossil Armor</div>
     <div class="order">Necro Armor</div><br><br><br><br><br><br><br>
     <h5> Hardmode</h5>
