--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <li class="yeet current"><a href="index.html">Home page</a></li><li class="yeet"><a href="melee.html">Melee</a></li><li class="yeet"><a href="ranged.html">Ranged</a></li><li class="yeet"><a href="magic.html">Magic</a></li><li class="yeet"><a href="summoner.html">Summoner</a></li>
     </ul>
       <h3 class="intro"> With Terraria 1.4 AKA "Journeys End" finally out I found it appropriate to make a build guide for myself and others that enjoy playing this game as much as I do.</h5>
-      <h5>All pictures on this website are screenshots of Terraria taken by me.</h5>
+    <marquee>All pictures on this website are screenshots of Terraria taken by me.</marquee>
   </head>
   <body>
    <p>To start there are four main classes, each one has it's own unique fighting style that fits different types of people. Some of the items that you will use will be interchangable between all classes, which is why I'll show you them here.</p>
